--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vue/compiler-sfc": "^3.0.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.6.0"
+    "eslint-plugin-vue": "^7.6.0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
@@ -32,6 +33,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
+
     "rules": {}
   },
   "browserslist": [
